--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               </div>
               <div class="flex justify-between">
                 <dt>Location</dt>
-                <dd>CIT · Room TBD</dd>
+                <dd>Friedman Hall 108</dd>
               </div>
               <div class="flex justify-between">
                 <dt>Credits</dt>
@@ -326,7 +326,7 @@
     <section id="staff" class="py-10">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <h2 class="text-2xl font-bold tracking-tight">Course Staff</h2>
-        <div class="mt-6 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+        <div class="mt-6 grid gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5">
           <!-- Instructor -->
           <div
             class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
@@ -338,12 +338,12 @@
                 alt="Instructor"
               />
               <div>
-                <div class="font-semibold">Instructor · Your Name</div>
+                <div class="font-semibold">Instructor · Michael Littman</div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  email@brown.edu
+                  michael_littman@brown.edu
                 </div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  Office hours: Tue 3–4pm
+                  Office hours: TBD
                 </div>
               </div>
             </div>
@@ -359,12 +359,12 @@
                 alt="TA"
               />
               <div>
-                <div class="font-semibold">Head TA · Name</div>
+                <div class="font-semibold">Assistant Instructor · Francisco Piedrahita-Velez</div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  hta@brown.edu
+                  fpiedrah@brown.edu
                 </div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  Office hours: Thu 10–11am
+                  Office hours: TBD
                 </div>
               </div>
             </div>
@@ -385,6 +385,46 @@
                 </div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
                   Office hours: Fri 2–3pm
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
+          >
+            <div class="flex items-center gap-4">
+              <img
+                class="h-16 w-16 rounded-xl object-cover"
+                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?q=80&w=400&auto=format&fit=crop"
+                alt="UTA"
+              />
+              <div>
+                <div class="font-semibold">UTA · Name</div>
+                <div class="text-sm text-slate-600 dark:text-slate-400">
+                  uta2@brown.edu
+                </div>
+                <div class="text-sm text-slate-600 dark:text-slate-400">
+                  Office hours: Mon 3–4pm
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
+          >
+            <div class="flex items-center gap-4">
+              <img
+                class="h-16 w-16 rounded-xl object-cover"
+                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=400&auto=format&fit=crop"
+                alt="UTA"
+              />
+              <div>
+                <div class="font-semibold">UTA · Name</div>
+                <div class="text-sm text-slate-600 dark:text-slate-400">
+                  uta3@brown.edu
+                </div>
+                <div class="text-sm text-slate-600 dark:text-slate-400">
+                  Office hours: Wed 11am–12pm
                 </div>
               </div>
             </div>
