--- a/index.html
+++ b/index.html
@@ -326,7 +326,9 @@
     <section id="staff" class="py-10">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <h2 class="text-2xl font-bold tracking-tight">Course Staff</h2>
-        <div class="mt-6 grid gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5">
+        <div class="mt-6 space-y-6">
+          <!-- First row: 2 people -->
+          <div class="grid gap-6 sm:grid-cols-2 max-w-4xl mx-auto">
           <!-- Instructor -->
           <div
             class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
@@ -369,6 +371,9 @@
               </div>
             </div>
           </div>
+          </div>
+          <!-- Second row: 3 people -->
+          <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
           <div
             class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
           >
@@ -430,7 +435,8 @@
             </div>
           </div>
         </div>
-      </div>
+        </div>
+        </div>
     </section>
 
     <!-- Schedule -->
