--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="mt-6 flex flex-wrap gap-3 text-sm">
               <span
                 class="inline-flex items-center gap-2 rounded-2xl border border-slate-200/80 dark:border-slate-800/80 px-3 py-1.5"
-                ><span class="i">📍</span> CIT · Room TBD</span
+                ><span class="i">📍</span> Friedman Hall · 108</span
               >
               <span
                 class="inline-flex items-center gap-2 rounded-2xl border border-slate-200/80 dark:border-slate-800/80 px-3 py-1.5"
@@ -345,7 +345,7 @@
                   michael_littman@brown.edu
                 </div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  Office hours: TBD
+                  Office hours: Tuesday 1-2PM, CIT 301
                 </div>
               </div>
             </div>
@@ -384,12 +384,12 @@
                 alt="TA"
               />
               <div>
-                <div class="font-semibold">UTA · Name</div>
+                <div class="font-semibold">UTA · Kaicheng Guo</div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  uta@brown.edu
+                  kaicheng_guo@brown.edu
                 </div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  Office hours: Fri 2–3pm
+                  Office hours: TBD
                 </div>
               </div>
             </div>
@@ -404,12 +404,12 @@
                 alt="UTA"
               />
               <div>
-                <div class="font-semibold">UTA · Name</div>
+                <div class="font-semibold">UTA · Chen-En Ma</div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  uta2@brown.edu
+                  chen-en_ma@brown.edu
                 </div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  Office hours: Mon 3–4pm
+                  Office hours: TBD
                 </div>
               </div>
             </div>
@@ -424,12 +424,12 @@
                 alt="UTA"
               />
               <div>
-                <div class="font-semibold">UTA · Name</div>
+                <div class="font-semibold">UTA · Shafiul Haque</div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  uta3@brown.edu
+                  shafiul_haque@brown.edu
                 </div>
                 <div class="text-sm text-slate-600 dark:text-slate-400">
-                  Office hours: Wed 11am–12pm
+                  Office hours: TBD
                 </div>
               </div>
             </div>
@@ -657,23 +657,37 @@
             class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
           >
             <h3 class="font-semibold">Assessment</h3>
-            <ul class="mt-3 space-y-2 text-sm">
-              <li class="flex justify-between">
-                <span>Homework (2–3)</span><span>35%</span>
-              </li>
-              <li class="flex justify-between">
-                <span>Paper scribing/discussion lead</span><span>10%</span>
-              </li>
-              <li class="flex justify-between">
-                <span>Participation</span><span>10%</span>
-              </li>
-              <li class="flex justify-between">
-                <span>Project (proposal→poster)</span><span>45%</span>
-              </li>
-            </ul>
-            <p class="mt-3 text-xs text-slate-500 dark:text-slate-400">
-              Weights subject to slight adjustments; announced in class.
-            </p>
+<ul class="mt-3 space-y-2 text-sm">
+  <li class="flex justify-between">
+    <span>Homework (5 assignments)</span><span>50% (10% each)</span>
+  </li>
+  <li class="flex justify-between">
+    <span>Final Project</span><span>30%</span>
+  </li>
+  <li class="flex justify-between">
+    <span>Final Exam</span><span>30%</span>
+  </li>
+  <li class="flex justify-between font-semibold">
+    <span>Total Possible</span><span>110%</span>
+  </li>
+</ul>
+<div class="mt-4">
+  <h4 class="font-semibold text-sm mb-2">Letter Grades</h4>
+  <ul class="space-y-1 text-xs text-slate-600 dark:text-slate-400">
+    <li class="flex justify-between">
+      <span>A</span><span>90%+</span>
+    </li>
+    <li class="flex justify-between">
+      <span>B</span><span>80%+</span>
+    </li>
+    <li class="flex justify-between">
+      <span>C</span><span>70%+</span>
+    </li>
+    <li class="flex justify-between">
+      <span>NC (No Credit)</span><span>Below 70%</span>
+    </li>
+  </ul>
+</div>
           </div>
         </div>
       </div>
