--- a/index.html
+++ b/index.html
@@ -292,11 +292,12 @@
                 <td class="px-4 py-3 font-medium">Introduction</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">
-                  <a class="text-brand-700 hover:underline" href="#"
-                    >Link to Note</a
-                  >
+                  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/week1slides.pdf"
+                    target="_blank" rel="noopener">Slides</a>
                 </td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/play/HrhFBvuwBt0SItBEszUYrUAxP0xKhmCHaGSKkQr2mRcHGCyPWufk17tRWbj28EbhNFJdhbV3HyquujP_.m7jP-ZEiF63cYOCl?eagerLoadZvaPages=sidemenu.billing.plan_management&accessLevel=meeting&canPlayFromShare=true&from=my_recording&continueMode=true&componentName=rec-play&originRequestUrl=https%3A%2F%2Fbrown.zoom.us%2Frec%2Fshare%2F15aKeqpYSN7TcfMrwRnzGnND81Inpao0pWde1TmWGlLzsVnqxDXfNYpQC9K34DXi.RpMu9OiOAAY9I16-"target="_blank" rel="noopener">Recording</a>
+              </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">2</td>
@@ -606,9 +607,8 @@
             <h3 class="font-semibold">Communication</h3>
             <ul class="mt-3 text-sm space-y-2">
               <li>
-                <a class="text-brand-700 hover:underline" href="#"
-                  >Ed Discussion (TBD)</a
-                >
+                <a class="text-brand-700 hover:underline" href="https://edstem.org/us/courses/86433/discussion"
+    target="_blank" rel="noopener">Ed Discussion</a>
               </li>
               <li>
                 <a class="text-brand-700 hover:underline" href="#"
