--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
               michael_littman@brown.edu
             </div>
             <div class="text-sm text-slate-600 dark:text-slate-400">
-              Office hours: Tuesday 1pm in CIT 301
-            </div>
+  Office hours: Tuesday 1pm in CIT 301 (exceptions: 9/16 3pm, 9/23 canceled, 10/14 canceled, 10/21 2pm)
+</div>
           </div>
           <div
             class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
@@ -306,8 +306,12 @@
                   Probability and Simple decisions
                 </td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day2slides.pdf" target="_blank" rel="noopener">Slides</a>
+</td>
+                <td class="px-4 py-3">
+  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/wrL6mxSg5SnRjgv7OnULBzeIfiI4UNhHFdLK7vbbLbmLVgZl6UYzh57YaVe7rbqs.3R5bWob0fvTGIW52" target="_blank" rel="noopener">Recording</a>
+</td>
               </tr>
               <tr>
                 <td class="px-4 py-3">2</td>
@@ -574,21 +578,21 @@
             >
               <tbody class="divide-y divide-slate-200 dark:divide-slate-800">
                 <tr>
-                  <td class="px-4 py-2">A</td>
-                  <td class="px-4 py-2 text-right font-medium">90%+</td>
-                </tr>
-                <tr>
-                  <td class="px-4 py-2">B</td>
-                  <td class="px-4 py-2 text-right font-medium">80%+</td>
-                </tr>
-                <tr>
-                  <td class="px-4 py-2">C</td>
-                  <td class="px-4 py-2 text-right font-medium">70%+</td>
-                </tr>
-                <tr>
-                  <td class="px-4 py-2">NC</td>
-                  <td class="px-4 py-2 text-right font-medium">below 70%</td>
-                </tr>
+  <td class="px-4 py-2">A</td>
+  <td class="px-4 py-2 text-right font-medium">90-110%</td>
+</tr>
+<tr>
+  <td class="px-4 py-2">B</td>
+  <td class="px-4 py-2 text-right font-medium">80-89%</td>
+</tr>
+<tr>
+  <td class="px-4 py-2">C</td>
+  <td class="px-4 py-2 text-right font-medium">70-79%</td>
+</tr>
+<tr>
+  <td class="px-4 py-2">NC</td>
+  <td class="px-4 py-2 text-right font-medium">below 70%</td>
+</tr>
               </tbody>
             </table>
           </div>
@@ -597,45 +601,62 @@
     </section>
 
     <!-- Resources -->
-    <section id="resources" class="py-8">
-      <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
-        <h2 class="text-2xl font-bold tracking-tight">Resources</h2>
-        <div class="mt-4 grid gap-6 md:grid-cols-3">
-          <div
-            class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
-          >
-            <h3 class="font-semibold">Communication</h3>
-            <ul class="mt-3 text-sm space-y-2">
-              <li>
-                <a class="text-brand-700 hover:underline" href="https://edstem.org/us/courses/86433/discussion"
-    target="_blank" rel="noopener">Ed Discussion</a>
-              </li>
-              <li>
-                <a class="text-brand-700 hover:underline" href="#"
-                  >Gradescope (TBD)</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div
-            class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
-          >
-            <h3 class="font-semibold">Textbook</h3>
-            <ul class="mt-3 text-sm space-y-2">
-              <li>
-                <a
-                  class="text-brand-700 hover:underline"
-                  href="https://algorithmsbook.com/files/dm.pdf"
-                  target="_blank"
-                  rel="noopener"
-                  >Kochenderfer et al.: Algorithms for Decision Making (PDF)</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
+    <!-- Policies -->
+<section id="policies" class="py-8">
+  <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
+    <h2 class="text-2xl font-bold tracking-tight">Policies</h2>
+    <div class="mt-4 grid gap-6 md:grid-cols-2">
+      <div class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft">
+        <h3 class="font-semibold">Collaboration Policy</h3>
+        <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
+          You are free to talk about class material including homeworks with other people. However, it is forbidden for two people to submit the same text or diagrams. To ensure that you do not hand in duplicate answers, it is best if you do not look at all at each other's answers, but restrict your discussion to the ideas themselves.
+        </p>
       </div>
-    </section>
+      <div class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft">
+        <h3 class="font-semibold">Incomplete Policy</h3>
+        <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
+          We expect everyone to complete the course on time. However, we certainly understand that there may be factors beyond your control, such as health problems and family crises, that prevent you from finishing the course on time. If you feel you cannot complete the course on time, please discuss with Prof. Littman the possibility of being given a grade of Incomplete for the course and setting a schedule for completing the course in the upcoming year. Requests for accommodations by a dean are required.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft">
+        <h3 class="font-semibold">Due Dates</h3>
+        <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
+          Projects and homeworks must be handed in by 11:59 pm on their due dates.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft">
+        <h3 class="font-semibold">Late Policy</h3>
+        <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
+          If you are ill, you may get an extension for homeworks. Please get a note from either health services or a dean and contact Prof. Littman.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft">
+        <h3 class="font-semibold">Accommodations</h3>
+        <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
+          If you feel you have physical, psychological, or learning disabilities that could affect your performance in the course, we urge you to contact <a class="text-brand-700 hover:underline" href="https://www.brown.edu/campus-life/support/accessibility-services/" target="_blank" rel="noopener">SAS</a>. We will do whatever we can to support accommodations recommended by SAS. We also intend to provide lecture capture in an attempt to make the class as inclusive and accessible as possible.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft">
+        <h3 class="font-semibold">Mental Health</h3>
+        <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
+          Being a student can be very stressful. If you feel you are under too much pressure or there are psychological issues that are keeping you from performing well at Brown, we encourage you to contact <a class="text-brand-700 hover:underline" href="https://www.brown.edu/campus-life/support/counseling-and-psychological-services/" target="_blank" rel="noopener">Brown's Counseling and Psychological Services (CAPS)</a>. They provide confidential counseling.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft">
+        <h3 class="font-semibold">Coping with Unforeseen or Difficult Circumstances</h3>
+        <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
+          Please feel free to talk to Prof. Littman about life events that impact your performance in the course. Additionally, <a class="text-brand-700 hover:underline" href="https://www.brown.edu/offices/student-support/student-support-services" target="_blank" rel="noopener">Student Support Services Deans</a> can be a helpful resource for discussing current concerns and academic and personal plans. They are available for both same-day consults and scheduled appointments.
+        </p>
+      </div>
+      <div class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft">
+        <h3 class="font-semibold">Video Resource</h3>
+        <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
+          <a class="text-brand-700 hover:underline" href="https://www.udacity.com/course/reinforcement-learning--ud600" target="_blank" rel="noopener">https://www.udacity.com/course/reinforcement-learning--ud600</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Policies (only Late Work per your edits) -->
     <section id="policies" class="py-8">
