--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@
                 <td class="px-4 py-3 font-medium">Algorithms for MDPs</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/2AhXRdYrdRT_UJuvu4CyKuNhBh8oinMabdJHxEiUpTBlMr8Ek-ezM3udf6s9d5Ft.oEX5o1qKFJkse6ZZ"target="_blank" rel="noopener">Recording</a>
+              </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">3</td>
@@ -657,23 +659,6 @@
     </div>
   </div>
 </section>
-
-    <!-- Policies (only Late Work per your edits) -->
-    <section id="policies" class="py-8">
-      <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
-        <h2 class="text-2xl font-bold tracking-tight">Policies</h2>
-        <div class="mt-4 grid gap-6 md:grid-cols-2">
-          <div
-            class="rounded-2xl border border-slate-200/80 dark:border-slate-800/80 p-5 shadow-soft"
-          >
-            <h3 class="font-semibold">Late Work</h3>
-            <p class="mt-2 text-sm text-slate-600 dark:text-slate-300">
-              Late policy TBD.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Footer -->
     <footer class="border-t border-slate-200/80 dark:border-slate-800/80 py-10">
