--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               <tr>
                 <td class="px-4 py-3">2</td>
                 <td class="px-4 py-3">Sep 11</td>
-                <td class="px-4 py-3 font-medium">Algorithms for MDPs</td>
+                <td class="px-4 py-3 font-medium">Probability and Simple Decisions continued</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">
   <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day3slides.pdf" target="_blank" rel="noopener">Slides</a>
@@ -328,10 +328,12 @@
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">3</td>
                 <td class="px-4 py-3">Sep 16</td>
-                <td class="px-4 py-3 font-medium">Approximations and Search</td>
+                <td class="px-4 py-3 font-medium">Algorithms for MDPs</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/lQ2fWPiXbUkV9ihRziZQmn6vJWvl4a_y5Ft07a85KJt7XPGHvEDqQPdqSwnOvHPM.TNRde9n4GTriVnbO"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr>
                 <td class="px-4 py-3">3</td>
