--- a/index.html
+++ b/index.html
@@ -330,7 +330,9 @@
                 <td class="px-4 py-3">Sep 16</td>
                 <td class="px-4 py-3 font-medium">Algorithms for MDPs</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">N/A</td>
+                <td class="px-4 py-3">
+  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day4slides.pdf" target="_blank" rel="noopener">Slides</a>
+</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/lQ2fWPiXbUkV9ihRziZQmn6vJWvl4a_y5Ft07a85KJt7XPGHvEDqQPdqSwnOvHPM.TNRde9n4GTriVnbO"target="_blank" rel="noopener">Recording</a>
                 </td>
