--- a/index.html
+++ b/index.html
@@ -318,9 +318,7 @@
                 <td class="px-4 py-3">Sep 11</td>
                 <td class="px-4 py-3 font-medium">Probability and Simple Decisions continued</td>
                 <td class="px-4 py-3">TBD</td>
-                <td class="px-4 py-3">
-  <a class="text-brand-700 hover:underline" href="https://cs.brown.edu/courses/csci2951f/2025/day3slides.pdf" target="_blank" rel="noopener">Slides</a>
-</td>
+                <td class="px-4 py-3">N/A</td>
                 <td class="px-4 py-3">
                   <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/2AhXRdYrdRT_UJuvu4CyKuNhBh8oinMabdJHxEiUpTBlMr8Ek-ezM3udf6s9d5Ft.oEX5o1qKFJkse6ZZ"target="_blank" rel="noopener">Recording</a>
               </td>
