--- a/index.html
+++ b/index.html
@@ -341,7 +341,9 @@
                 <td class="px-4 py-3 font-medium">Policy search</td>
                 <td class="px-4 py-3">TBD</td>
                 <td class="px-4 py-3">N/A</td>
-                <td class="px-4 py-3">—</td>
+                <td class="px-4 py-3">
+                  <a class="text-brand-700 hover:underline" href="https://brown.zoom.us/rec/share/_WgNdR4xt0FswwLBm7H4MYpwCnH7z_gmmSYXneK3U3A5Eve21gVEGfbveT1H20cG.IfiiDGnRtN5-_fZE"target="_blank" rel="noopener">Recording</a>
+                </td>
               </tr>
               <tr class="bg-slate-50/40 dark:bg-slate-900/40">
                 <td class="px-4 py-3">4</td>
